--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,15 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-  <h1 class="text-3xl font-bold text-purple-500">TESTE</h1>
+  <main class="h-screen w-full bg-slate-700 flex items-center justify-center">
+    <section class="bg-slate-900 w-full max-w-lg rounded py-4 px-12 text-white">
+      <h1 class="text-center font-bold text-2xl">Chat App</h1>
+
+      <form class="flex flex-1 flex-col mt-8 gap-3">
+        <input class="px-2 py-2 rounded text-slate-900" type="text" placeholder="Enter a username">
+        <button class="py-2 px-10 bg-slate-700 rounded max-w-xs m-auto" type="submit">Join chat</button>
+      </form>
+    </section>
+  </main>
 </body>
 </html>
